<resources>
    <string name="app_name">SiriusApp</string>
    <string name="profile">Профиль</string>
    <string name="home">Главная</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_sirius">Добро пожаловать в Sirius!</string>
    <string name="daily_tasks">Ежедневные задания</string>
    <string name="nums">Числительные</string>
    <string name="time">Время</string>
    <string name="dates">Даты</string>
    <string name="geography">География</string>
    <string name="addresses">Адреса</string>
    <string name="combo">Комбо</string>
    <string name="two_digits">Двухзначные</string>
    <string name="three_digit">Трёхзначные</string>
    <string name="four_digit">Четырёхзначные</string>
    <string name="five_six_digit">Пяти- и шестизначные</string>
    <string name="training_by_themes">Тренировка по темам</string>
    <string name="enter_answer">Вводите ответ в это окно</string>
    <string name="start">Начать</string>
    <string name="check_answer">Проверить ответ</string>
    <string name="end">Продолжить</string>
    <string name="_3">3…</string>
    <string name="_2">2…</string>
    <string name="_1">1…</string>
    <string name="listen_sound">Прослушайте запись…</string>
    <string name="accents">Акценты</string>
    <string name="uk">Британский</string>
    <string name="fr">Французский</string>
    <string name="difficult">Сложность</string>
    <string name="easy">Легкий</string>
    <string name="advanced">Продвинутый</string>
    <string name="num_phones">Номера телефонов</string>
    <string name="_3_of_3">Молодец! 3 из 3</string>
    <string name="_2_of_3">Всего одна ошибка! 2 из 3</string>
    <string name="_1_of_3">1 из 3</string>
    <string name="_0_of_3">0 из 3</string>
    <string name="right_answer">Правильный ответ:</string>
</resources>
