<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:src="@drawable/ic_baseline_settings_64"
        app:layout_constraintEnd_toEndOf="@+id/tv_settings"
        app:layout_constraintStart_toStartOf="@+id/tv_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_settings"/>

    <TextView
        android:id="@+id/tv_accents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accents"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings" />

    <ImageView
        android:id="@+id/iv_flag_uk"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="@+id/tv_accents"
        app:layout_constraintTop_toBottomOf="@+id/tv_accents" />

    <TextView
        android:id="@+id/tv_uk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uk"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_flag_uk"
        app:layout_constraintStart_toEndOf="@+id/iv_flag_uk"
        app:layout_constraintTop_toTopOf="@+id/iv_flag_uk" />

    <Switch
        android:id="@+id/switch_uk"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginRight="32dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_uk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_uk" />

    <ImageView
        android:id="@+id/iv_flag_fr"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="@+id/iv_flag_uk"
        app:layout_constraintTop_toBottomOf="@+id/iv_flag_uk" />

    <TextView
        android:id="@+id/tv_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fr"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_flag_fr"
        app:layout_constraintStart_toEndOf="@+id/iv_flag_fr"
        app:layout_constraintTop_toTopOf="@+id/iv_flag_fr" />

    <Switch
        android:id="@+id/switch_fr"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginRight="32dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_fr" />

    <TextView
        android:id="@+id/tv_difficult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficult"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_easy"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_easy"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/easy"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toStartOf="@id/btn_hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_hard"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginRight="24dp"
        android:text="@string/advanced"
        app:layout_constraintBottom_toBottomOf="@+id/btn_easy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_easy" />
</androidx.constraintlayout.widget.ConstraintLayout>
