<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_two_digit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two_digits"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_three_digit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/three_digit"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintTop_toBottomOf="@id/btn_two_digit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_four_digit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_digit"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintTop_toBottomOf="@id/btn_three_digit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_five_six_digit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/five_six_digit"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintTop_toBottomOf="@id/btn_four_digit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
