<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ed_answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="12"
        android:gravity="center_horizontal"
        android:hint="@string/enter_answer"
        android:maxLength="3"
        android:inputType="number"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_answer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="12"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:hint="@string/enter_answer"
        android:maxLength="3"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_answer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/enter_answer"
        android:maxLength="3"
        android:inputType="number"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48dp"
        android:autofillHints="no" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="18sp"
        android:ems="14"
        android:visibility="visible"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:textSize="18sp"
        android:ems="14"
        android:visibility="invisible"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:visibility="invisible"
        android:ems="14"
        android:textSize="18sp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_audio_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/volume_button"
        app:layout_constraintBottom_toTopOf="@+id/ed_answer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:layout_margin="32dp"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_audio_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>
